<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">USBKIT</string>
    <string name="save">Save</string>

    <!-- Activity -->
    <string name="no_root">Root service startup failed!</string>
    <string name="retry">Retry</string>

    <!-- Fragment -->
    <string name="select_file">Select File</string>
    <string name="list_empty">¯\\_(ツ)_\/¯\nNothing here</string>
    <string name="create_img">New Image</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="delete_ms">Confirm to delete configuration %s? \nAll logical units except lun.0 under this configuration must have been deleted!</string>
    <string name="delete_hid">Confirm to delete configuration %s? </string>
    <string name="delete_lun">Confirm to delete logical unit %s in configuration %s?</string>
    <string-array
        name="mount_modes"
        translatable="false">
        <item>Read-Only</item>
        <item>Read-Write</item>
        <item>CD-Rom</item>
    </string-array>
    <string-array
        name="hid_type"
        translatable="false">
        <item>Keyboard</item>
        <item>Mouse</item>
    </string-array>

    <!-- Xml -->
    <string name="sync_conf">Repair Configuration</string>
    <string name="img_name">Image Name</string>
    <string name="img_size">Image Size(MB)</string>
    <string name="conf_name">Configuration Name</string>
    <string name="ms_img_path">Image File/Block Device Path</string>
    <string name="ms_mount_mode">Mount Mode</string>
    <string name="hid_create_type">Hid Protocol</string>
    <string name="ms_removable">Removable</string>
    <string name="ms_nofua">Nofua</string>
    <string name="ms_help">Help: \nConfiguration name: Generally, you can select an existing configuration. If a non-existent configuration is filled in, it will be created. There may be a limit on the number of logical units under each configuration (about 8 or 15, depending on the manufacturer). When the limit is reached, you can try to change the configuration. \nNofua: Force write cache to be enabled, which may cause data loss.</string>
    <string name="use">Use</string>

    <!-- Settings -->
    <string name="about">About</string>
    <string name="about_view_source_code">
        <![CDATA[View source code at %1$s]]>
    </string>
    <string name="configfs">ConfigFS</string>
    <string name="enable_udc">Enable USB device</string>
    <string name="use_gadget">Switch Gadget</string>
    <string name="enable_funs">Enable functions</string>
    <string name="usb_info">Modify USB device information</string>
    <string name="settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="theme_color">Theme color</string>
    <string name="theme_color_system">System theme color</string>
    <string name="pure_black_dark_theme">Black dark theme</string>
    <string name="pure_black_dark_theme_summary">Use the pure black theme if dark theme is enabled</string>
    <string name="settings_group_theme">Theme</string>

    <!-- Colors -->
    <string name="color_sakura">Sakura</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_deep_purple">Deep purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_light_green">Light green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_amber">Amber</string>
    <string name="color_orange">Orange</string>
    <string name="color_deep_orange">Deep orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_blue_grey">Blue grey</string>

</resources>
