<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="?attr/dialogPreferredPadding">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:id="@+id/ms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conf_name"
            android:enabled="false">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/ms_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/ms_img_path"
            android:id="@+id/path_layout"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_folder_open"
            style="?attr/textInputOutlinedStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:id="@+id/path" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ms_mount_mode">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="Read-Write"
                app:simpleItems="@array/mount_modes" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="8dp"
            android:id="@+id/removable"
            android:text="@string/ms_removable" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/nofua"
            android:text="@string/ms_nofua" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/ms_help"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
